css/styles.css
/* MOBILE AND GLOBAL STYLES */

/* applies to screens smaller than 500px (first breakpoint) */
/* and above unless overwritten below */

/* defaults */

*{
    color: #483c32;
    font-family: Georgia, 'Times New Roman', Times, serif;
    user-select: none;
    scroll-behavior: smooth;
}

body {
    background-color: #FFF0F5;
}


/* scroll bar */

::-webkit-scrollbar {
    width: 10px;
  }
  
  ::-webkit-scrollbar-track {
    background: #FFF0F5; 
  }
   
  ::-webkit-scrollbar-thumb {
    background: #9EB9D4; 
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background: #C08081; 
  }
  

/* header */

header {
    text-align: center;
    background: #C08081;
    border-radius: 5px;
    height: 80px;
    display: flex;
    justify-content: center;
}

header h1{
    display: flex;
    vertical-align: bottom;
}

/* footer */

footer {
    background-color: #C08081;
    margin-top: 5px;
    border-radius: 5px;
    display: flex;
    user-select: none;
    padding: 5px;
}

footer p{
    margin-left: 10px;
}


/* top menu */

#menu {
    background-color: #9EB9D4;
    display: flex;
    flex-direction: row;
    justify-content:space-evenly;
    padding: 5px;
    border-radius: 5px;
    margin-top: 5px;
    height: 70px;
    position: relative;
    top: 0px;
}

#menu a{
    padding: 8px;
    border-radius: 5px;
    text-decoration: none;
}

#menu a img{
    height: 50px;
}

#menu a:hover{
    background-color: #B9D9EB;
}

.active:hover{
    background-color: #9EB9D4;
}

.active {
    font-weight: bold;
}

/* aside menu */

#menuToggler {
    position: fixed;
    bottom: 10px;
    right: 10px;
    text-align: center;
    padding: 5px;
    height: 25px;
    width: 25px;
    border-radius: 25%;
    z-index: 1;
    background-color: #9EB9D4;
    opacity: 75%;
}

#navigate {
    position: fixed;
    transform: translateX(200vw);
    transition: transform 0.4s;

    background-color: #9EB9D4;
    display: flex;
    flex-direction:column;
    width: 250px;
    height: fit-content;
    float: right;
    margin-left: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    right: 10px;
    bottom: 45px;
    border: 10px solid #9EB9D4;
    border-radius: 10px;

    z-index: 1;


}

#navigate.open {
    transition: transform 0.4s, opacity 0.2s;
    transform: none;
    opacity: 1;
}

#navigate a {
    text-decoration: none;
    transition: backgroound-color 0.5s;
    padding: 5px;
    border-radius: 5px;
}

#navigate a:hover {
    background-color: #B9D9EB;
}


/* headshot */

#mainImg{
    display: block;
    margin-top: 10px;
    margin-left: 5px;
    margin-right: auto;
    margin-bottom: 5px;
    height: fit-content;
    max-width: 50%;
    max-height: fit-content;

    float: right;

    border-radius: 5px;
    object-fit: cover;

}


/* body */

p {
    text-align: justify;
}

h2 {
    background-color: #C08081;
    border: 10px solid #C08081;
    border-radius: 10px;
    display: flex;
    height: 30px;
}

/* intro section */

#about h2 {
    background-color: #FFF0F5;
    border-color: #FFF0F5;
    border: 5px;
}


/* Grades tabs */

/*
#gradeSection {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

}


.grades {
    background-color: #ACC9E0;
    border: 10px solid #ACC9E0;
    width: 400px;
    margin-left: 5px;
    margin-right: 5px;
    border-radius: 10px;

}

#gradeSection h3 {
    text-align: center;
}

#gradeSection p {
    text-align: center;
    font-size: 85%;
    margin: 7px;
}

#scho {
    font-weight: bold;
}

*/

#gradeSection {
    width: 33%;
    float: left;
}

.tabContent{
    height: 500px;
}

.tab {
    overflow: hidden;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    display: flex;
    justify-content: space-evenly;
    background-color: #9EB9D4;
}

.tab button {
    background-color: #9EB9D4;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 10px 10px;
    transition: 0.3s;
}

.tab button:hover {
    font-weight: bold;
}

.tabContent {
    display: grid;
    border: 5px solid #9EB9D4;
    background-color: #ACC9E0;
    border-radius: 5px;
    border-top-left-radius: 0%;
    border-top-right-radius: 0%;
    height: 300px;  
}

#gradeSection p {
    text-align: center;
    font-size: 85%;
    margin: 7px;
    margin-top: 10px;
}

#scho {
    font-weight: bold;
}

#certificate {
    width: 145px;
    display: block;
    margin: auto;
    transition: transform .2s; 
    border: 3px solid #9EB9D4;
    transform: translateY(-5px);
}

#certificate:hover {
    transform: translateY(-44px) scale(1.4);
    display: block;
    margin: auto;
}

#largeImg {
    z-index: 1;
    width: 50%;
}



/* Experience */

#experienceSection {
    float: left;
    width: 66%;
    height: 500px;
    margin-left: 10px;
}

/* Projects */

#projectsSection {
    display: flex;
    flex-direction: column;
    text-align: center;
    float: right;
}

#projects {
    border: 10px solid #ACC9E0;
    background-color: #ACC9E0;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 10px;
    border-radius: 10px;
    cursor: pointer;
    height: 300px;
    text-decoration: none;
    transition: transform .2s;
}

#projects:hover {
    filter: drop-shadow(0 0 0.5em #C08081);
    transform: scale(1.05);
    transition: transform 0.4s;
}

#projects p {
    text-align: center;
}

#language, #program {
    display: inline-block;
    padding: 5px;
    border-radius: 5px;
    background-color: #9EB9D4;
}

#projectTitle {
    display: flex;
    align-items: center;
}

#projectDesc {
    text-align: center;
    text-decoration: none;
    font-size: small;
    font-weight: normal;
    margin-left: 10px;
}

/* TABLET STYLES */

@media screen and (min-width: 500px) {

    #mainImg{
        max-width: 35%;
        
    }
    

    /* projects */

    #projects {
        width: 50%;
    }

    #projectsSection{
        flex-direction: row;
    }
}

/* DESKTOP STYLES */

@media screen and (min-width: 1000px) {


    /* header */

    header {
        width: 65%;
        padding-left: 10px;
        text-align: left;
        position: relative;
        justify-content: left;

    }

    /* menu */

    #menu {
        float: right;
        margin-top: -80px;
        width: 33%;

    }

    #mainImg {
        min-width: 200px;
        max-width: 350px;
    }

    /* projects */

    #projects {
        width: 50%;
    }


}

